[gd_scene load_steps=14 format=3 uid="uid://dq610l4e2kst0"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_7ydi1"]
[ext_resource type="FontFile" uid="uid://bxt3gt7ljffnm" path="res://fonts/return-of-ganon/retganon.ttf" id="2_lvgrk"]
[ext_resource type="Texture2D" uid="uid://bw5y24oxpwfyc" path="res://assets/vignettes/vhs.png" id="3_580p3"]
[ext_resource type="Shader" path="res://scenes/dialog.gdshader" id="3_hjk8w"]
[ext_resource type="AudioStream" uid="uid://dlfbhdrvph7yf" path="res://audio/environment/electronics/keyboard_press.wav" id="5_qbsy4"]
[ext_resource type="AudioStream" uid="uid://dkbteqhq2qchp" path="res://audio/environment/electronics/fridge_hum.mp3" id="6_3t387"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v0kcd"]
shader = ExtResource("3_hjk8w")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(150, 120)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 20.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.014
shader_parameter/noise_opacity = 0.209
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.5
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.3
shader_parameter/vignette_opacity = 0.522

[sub_resource type="Animation" id="Animation_wrtjy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_whd3w"]
resource_name = "text_fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4d02"]
_data = {
"RESET": SubResource("Animation_wrtjy"),
"text_fade": SubResource("Animation_whd3w")
}

[sub_resource type="Animation" id="Animation_tquyv"]
resource_name = "fade_sound"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HumSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-12.0, -80.0]
}

[sub_resource type="Animation" id="Animation_87yx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HumSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tskk0"]
_data = {
"RESET": SubResource("Animation_87yx0"),
"fade_sound": SubResource("Animation_tquyv")
}

[node name="Control" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6, 6)
script = ExtResource("1_7ydi1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 1
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -910.0
offset_top = -935.0
offset_right = -690.0
offset_bottom = -908.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_lvgrk")
bbcode_enabled = true
text = "jjaipfjafjaopfjaopfjopajfopafaapfkapfa"
fit_content = true
scroll_active = false

[node name="Slideshow" type="Node2D" parent="."]
visible = false
position = Vector2(13, 159)

[node name="Picture" type="Sprite2D" parent="Slideshow"]
texture_filter = 1
position = Vector2(147, -84)
texture = ExtResource("3_580p3")

[node name="ColorRect2" type="ColorRect" parent="Slideshow"]
material = SubResource("ShaderMaterial_v0kcd")
offset_left = 72.0
offset_top = -144.0
offset_right = 222.0
offset_bottom = -24.0

[node name="Fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w4d02")
}

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qbsy4")
volume_db = -1.0

[node name="HumSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3t387")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tskk0")
}

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
